--- a/Chinedu_CUNY_SPS_DATA607_Project2a.Rmd
+++ b/Chinedu_CUNY_SPS_DATA607_Project2a.Rmd
@@ -7,7 +7,8 @@ output:
     theme: cayman
     highlight: github
 ---
-### **Name: Chinedu Onyeka, Date: October 1st, 2021**
+### **Name: Chinedu Onyeka, Date: October 1st, 2021**  
+#### **Collaborators: Tyler Baker, Leticia Salazar**
 
  
 #### **Objective:** To understand the trend in global child mortality from the 1980's  
